--- a/src/index.css
+++ b/src/index.css
@@ -37,3 +37,13 @@
     /* height: 100px; */
     width: 250px;
 }
+
+ol li {
+    margin: 3px 12px 3px 12px;
+    
+
+
+
+  }
+
+  ol{list-style-type: decimal;}
